@@ -1,3 +1,9 @@
+2007-10-21  Renato Caldas  <seventhguardian@gmail.com>
+
+	* acinclude.m4:
+	* configure.ac:
+	use AS_HELP_STRING to format the configure options help strings
+
 2007-10-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* fvwm/conditional.c:
